--- a/codeigniter/.htaccess
+++ b/codeigniter/.htaccess
@@ -1,22 +1,6 @@
-<IfModule mod_rewrite.c>
-    # <IfModule mod_negotiation.c>
-    #     Options -MultiViews
-    # </IfModule>
-
-    RewriteEngine On
-
-    # Redirect Trailing Slashes If Not A Folder...
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteRule ^(.*)/$ /$1 [L,R=301]
-
-    # Handle Front Controller...
-    RewriteCond %{REQUEST_FILENAME} !-d
-    RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ index.php [L]
-    # RewriteRule ^xyz/abc/(.*?)$ /controller.php?pid=1&QS=$1&%{QUERY_STRING} [L]
-    RewriteRule ^(.*)/$ /Manage_Accounts/$1 [L]
-
-    # Handle Authorization Header
-    # RewriteCond %{HTTP:Authorization} .
-    # RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
-</IfModule>
+DirectoryIndex index.php
+RewriteEngine on
+RewriteCond $1 !^(index\.php|images|css|js|robots\.txt|favicon\.ico)
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ ./index.php?/$1 [L,QSA]
